--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Primer Proyecto Con Node.js",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "type": "module",
   "author": "Keylor Delgado",
